# OVStroop

./: .gitignore  README.md  pyproject.toml
ov_experiment/: README.md
ov_experiment/config/: openvibe.conf
ov_experiment/reference/: stimulation_code_shortlist.txt
ov_experiment/scenarios/: Stroop - TESTING.xml  Stroop.xml  Visualizer.xml  ov_to_edf.xml  viewer.xml
ov_experiment/scenarios/config/: image_display_config.xml  modified_duke.elc  sound_player_1_config.xml  sound_player_2_config.xml  sound_player_3_config.xml  sound_player_4_config.xml  sound_player_config.xml  stroop_buttons.txt
ov_experiment/scenarios/data/: record-[2023.10.16-14.41.48].edf
ov_experiment/scenarios/scripts/: stroop_timing.lua
ov_experiment/scenarios/tools/: make_stroop_stimuli.py
py_analysis/: config.yaml  main.ipynb
py_analysis/src/: config.py  config.yaml  processing.py
