[tool.poetry]
name = "py-analysis"
version = "0.1.0"
description = ""
authors = ["Tiaan Boshoff <tiaanboshoff02@gmail.com>"]
readme = "README.md"
packages = [{include = "py_analysis"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mne = "^1.5.1"
pyyaml = "^6.0.1"
jupyter = "^1.0.0"
pandas = "^2.1.1"
pyqt6 = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
